# MyPy-main

./: .gitignore  requirements.txt
.github/workflows/: greetings.yml  pylint.yml  run-tests.yml
app_test_for_home/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
app_test_for_home/migrations/versions/: acd2c493ed93_.py
app_test_for_home/models/: model.py
app_test_for_home/templates/: index.html
app_test_for_home/views/: api.py  views.py
homework_03/: .dockerignore  Dockerfile  app.py  main.py  pyproject.toml
homework_03/views/: hello.py  items.py  secret_views.py
homework_03/views/users/: __init__.py  crud.py  depenencies.py  schemas.py  views.py
homework_04/: docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_05/: app.py
homework_05/templates/: base.html
homework_06/: .coverage  .pylintrc
homework_06/app/: Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml
homework_06/app/migrations/: env.py
homework_06/app/migrations/versions/: 15b3e64bbc4d_.py
homework_06/app/models/: models.py
homework_06/app/templates/: base.html  hello.html  index.html
homework_06/app/templates/components/: navbar.html
homework_06/app/templates/products/: add.html  base.html  details.html  index.html
homework_06/app/templates/products/components/: back_to_prod_list.html
homework_06/app/views/products/: crud.py  models.py  views.py
homework_06/testing/: conftest.py  test_main.py
homework_07/store_project/my_auth/: admin.py  forms.py  models.py  urls.py  (+1 more)
testing/test_homework_04/: test_main.py
(+18 files in other folders)
